Atualização do DockerFile

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,9 @@ version: '3.8'
 
 services:
   api:
-    build: .
+    build: 
+      context: .
+      dockerfile: Dockerfile
     container_name: auvo-api
     restart: unless-stopped
     ports:
@@ -17,23 +19,3 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
-    networks:
-      - auvo-network
-
-  # Frontend (opcional - se quiser rodar o frontend também)
-  # frontend:
-  #   build: ./painel-admin
-  #   container_name: auvo-frontend
-  #   restart: unless-stopped
-  #   ports:
-  #     - "3000:3000"
-  #   environment:
-  #     - REACT_APP_API_URL=http://localhost:8000
-  #   depends_on:
-  #     - api
-  #   networks:
-  #     - auvo-network
-
-networks:
-  auvo-network:
-    driver: bridge
